--- a/angular.json
+++ b/angular.json
@@ -24,6 +24,7 @@
             ],
             "styles": [
               "src/styles.css",
+              "src/theme.scss",
               "node_modules/bulma/css/bulma.css"
             ],
             "scripts": []
@@ -73,7 +74,8 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "src/theme.scss"
             ],
             "scripts": [],
             "assets": [
