--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "bulma": "^0.7.1",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "ngx-cookie": "^4.0.2",
     "rxjs": "^6.0.0",
+    "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
